--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,8 +1,10 @@
 <h1>New game</h1>
 
+<ul>
 <% @letters.each do |letter| %>
-<%= letter %>
+<div><li><%= letter %></li></div>
 <% end %>
+</ul>
 
 <form action="/score" method="post">
 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
