--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -10,5 +10,5 @@
 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 <%= hidden_field_tag "grid", @letters %>
 <input type="text" name="word">
-<input type="submit" value="Play">
+<input type="submit" value="Play" class="btn">
 </form>
